Updated HTML for Algolia Search Bot

--- a/api-docs/_templates/footer.html
+++ b/api-docs/_templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer">
+<footer class="site-footer" data-nosnippet>
   <div class="footer-container">
     <div class="docs-links">
       <h5>Developer Network</h5>
@@ -29,7 +29,7 @@
     <span class="copyright">©2020 Rackspace US, Inc.</span>
   </div>
 </footer>
-<div class="basement-container">
+<footer class="basement-container" data-nosnippet>
   <ul>
     <li><span>©2020 Rackspace US, Inc.</span></li>
     <li class="text-link"><a href="https://www.rackspace.com/about/">About Rackspace</a></li>
@@ -37,4 +37,4 @@
     <li class="text-link"><a href="http://www.rackspace.com/information/legal/websiteterms">Website Terms</a></li>
     <li class="text-link"><a href="http://www.rackspace.com/information/legal/copyrights_trademarks">Trademarks</a></li>
   </ul>
-</div>
+</footer>
