--- a/api-docs/_templates/header.html
+++ b/api-docs/_templates/header.html
@@ -1,6 +1,6 @@
-<header class="site-header">
+<header class="site-header" data-nosnippet>
     <div class="header-links">
-        <div class="header-links-container">
+        <nav class="header-links-container">
           <div class="phone-chat-links">
             </div>
             <ul class="portal-links">
@@ -24,7 +24,7 @@
                     </ul>
                 </li>
             </ul>
-        </div>
+        </nav>
     </div>
 
     <div class="header-nav">
@@ -91,8 +91,8 @@
         </div>
     </div>
     <div class="header-announcement">
-      <div class="banner">
+      <nav class="banner">
         <p>End-to-End Multicloud Solutions.&nbsp;&nbsp;&nbsp;<strong>Solving Together.™</strong>&nbsp;&nbsp;&nbsp;Learn more at <a href="https://www.rackspace.com/">Rackspace.com</a></p>
-      </div>
+      </nav>
     </div>
 </header>
