--- a/api-docs/_templates/layout.html
+++ b/api-docs/_templates/layout.html
@@ -125,7 +125,7 @@
   {% block extrabody %}
   {% include "header.html" %}
   {% endblock %}
-
+<main>
   <div class="container-fluid">
     <div class="row">
      {% include "search-modal.html" %}
